test/classes/bradc/arrayInClass/arrayDomInClassRecord-illegal.good
arrayDomInClassRecord-illegal.chpl:30: In function 'baz':
arrayDomInClassRecord-illegal.chpl:31: error: cannot assign to const variable
arrayDomInClassRecord-illegal.chpl:16: Function 'baz' instantiated as: baz(x: R, y: int(64))
